Import question catalogs from a file or a sheet, and report a question while training