@@ -5,17 +5,14 @@
  */
 package dev.chojo.ember.feature.quiz.service;
 
-import dev.chojo.ember.feature.quiz.entity.CreateQuestionCommand;
 import dev.chojo.ember.feature.quiz.entity.QuestionConfig;
-import dev.chojo.ember.feature.quiz.entity.QuizCatalog;
-import dev.chojo.ember.feature.quiz.entity.QuizCategory;
 import dev.chojo.ember.feature.quiz.entity.QuizQuestionType;
+import dev.chojo.ember.feature.quiz.service.QuizImportService.CsvMappings;
+import dev.chojo.ember.feature.quiz.service.QuizImportService.DraftQuestion;
 import io.javalin.http.BadRequestResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 
-import java.time.Instant;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -24,51 +21,49 @@ import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
 class QuizImportServiceTest {
 
-    private static final QuizCatalog CATALOG =
-            new QuizCatalog(42, 7, "Catalog", "", false, false, Instant.EPOCH, Instant.EPOCH);
-
-    private QuizCatalogService catalogService;
-    private QuizQuestionService questionService;
     private QuizImportService service;
-    private int nextCategoryId;
 
     @BeforeEach
     void setUp() {
-        catalogService = mock(QuizCatalogService.class);
-        questionService = mock(QuizQuestionService.class);
-        service = new QuizImportService(catalogService, questionService);
-        nextCategoryId = 100;
-        when(catalogService.findCategories(anyInt())).thenReturn(List.of());
-        when(catalogService.createCategory(anyInt(), anyString(), anyString(), anyInt()))
-                .thenAnswer(invocation -> new QuizCategory(
-                        nextCategoryId++, invocation.getArgument(0), invocation.getArgument(1), "", 0));
+        service = new QuizImportService();
     }
 
-    private QuizImportService.CsvMappings mappings(String typeColumn, QuizQuestionType defaultType) {
-        return new QuizImportService.CsvMappings(
-                "Frage", "Antwort", "Kategorie", typeColumn, "Punkte", ",", ";", defaultType);
+    private static CsvMappings mappings(String typeColumn, QuizQuestionType defaultType) {
+        return new CsvMappings(
+                "Frage",
+                "Antwort",
+                "Kategorie",
+                typeColumn,
+                "Punkte",
+                "Beschreibung",
+                "Bild",
+                "Falsch",
+                "ProAntwort",
+                "Anzahl",
+                "Geordnet",
+                ",",
+                ";",
+                defaultType);
     }
 
-    private List<CreateQuestionCommand> captureCommands(int expected) {
-        var captor = ArgumentCaptor.forClass(CreateQuestionCommand.class);
-        verify(questionService, times(expected)).createQuestion(captor.capture());
-        return captor.getAllValues();
+    private static QuestionConfig configOf(DraftQuestion draft) {
+        return QuizQuestionType.valueOf(draft.question().quizQuestionType())
+                .readConfig(draft.question().config().toString())
+                .orElseThrow();
     }
+
+    private QuestionConfig draftOne(QuizQuestionType type, String answer) {
+        var draft = service.draft("Frage,Antwort\nTitel,%s\n".formatted(answer), mappings("Typ", type));
+        return configOf(draft.questions().getFirst());
+    }
+
+    // -- Rows --
 
     @Test
-    void importsRowsAndSkipsBlankQuestions() {
+    void draftsRowsAndSkipsBlankQuestions() {
         String csv = """
                 Frage,Antwort,Kategorie,Typ,Punkte
                 Was ist 1+1?,2;3,Mathe,MC,4
@@ -76,90 +71,94 @@ class QuizImportServiceTest {
                 Zweite Frage,ja,Mathe,MC,
                 """;
 
-        var result = service.importCsv(CATALOG, csv, mappings("Typ", null));
+        var draft = service.draft(csv, mappings("Typ", null));
 
-        assertEquals(2, result.imported());
-        var commands = captureCommands(2);
-        assertEquals("Was ist 1+1?", commands.get(0).title());
-        assertEquals(42, commands.get(0).catalogId());
-        assertEquals(4.0, commands.get(0).points());
-        assertTrue(commands.get(0).autoPoints());
-        assertEquals(0, commands.get(0).position());
-        assertEquals("Zweite Frage", commands.get(1).title());
-        assertEquals(1.0, commands.get(1).points());
-        assertEquals(2, commands.get(1).position(), "positions follow the sheet, not the import counter");
+        assertEquals(2, draft.questions().size());
+        var first = draft.questions().getFirst().question();
+        assertEquals("Was ist 1+1?", first.title());
+        assertEquals(4.0, first.points());
+        assertTrue(first.autoPoints());
+        assertEquals(0, first.position());
+        assertEquals("Zweite Frage", draft.questions().get(1).question().title());
+        assertEquals(1.0, draft.questions().get(1).question().points());
+        assertEquals(
+                1,
+                draft.questions().get(1).question().position(),
+                "a skipped row leaves no gap, because the draft is what gets created");
     }
 
     @Test
-    void reusesExistingCategoriesAndCreatesMissingOnesOnce() {
-        when(catalogService.findCategories(7)).thenReturn(List.of(new QuizCategory(5, 7, "Mathe", "", 0)));
+    void keepsTheAnswerCellSoTheWizardCanSplitItAgain() {
+        var draft = service.draft("Frage,Antwort\nA,eins;zwei\n", mappings("Typ", null));
+
+        assertEquals("eins;zwei", draft.questions().getFirst().rawAnswer());
+        assertEquals(";", draft.questions().getFirst().answerSeparator());
+    }
+
+    @Test
+    void collectsEachCategoryOnceAndKeysItByName() {
         String csv = """
-                Frage,Antwort,Kategorie,Typ,Punkte
-                A,x,Mathe,MC,1
-                B,x,MATHE,MC,1
-                C,x,Physik,MC,1
-                D,x,Physik,MC,1
-                E,x,,MC,1
+                Frage,Antwort,Kategorie
+                A,x,Wasserführende Armaturen
+                B,x,WASSERFÜHRENDE ARMATUREN
+                C,x,Brandlehre
+                D,x,
                 """;
 
-        service.importCsv(CATALOG, csv, mappings("Typ", null));
+        var draft = service.draft(csv, mappings("Typ", null));
 
-        var commands = captureCommands(5);
-        assertEquals(5, commands.get(0).categoryId().intValue());
-        assertEquals(5, commands.get(1).categoryId().intValue());
-        assertEquals(commands.get(2).categoryId(), commands.get(3).categoryId());
-        assertNull(commands.get(4).categoryId());
-        verify(catalogService, times(1)).createCategory(eq(7), eq("Physik"), eq(""), eq(1));
+        assertEquals(
+                List.of("wasserfuhrende-armaturen", "brandlehre"),
+                draft.categories().stream().map(c -> c.key()).toList());
+        assertEquals("Wasserführende Armaturen", draft.categories().getFirst().name());
+        assertEquals(
+                "wasserfuhrende-armaturen",
+                draft.questions().get(1).question().categoryKey(),
+                "a name spelled differently down the sheet is still the one category");
+        assertNull(draft.questions().get(3).question().categoryKey());
     }
+
+    @Test
+    void readsTheFurtherColumnsWhenTheSheetHasThem() {
+        String csv = """
+                Frage,Antwort,Beschreibung,Bild
+                A,x,Ein Hinweis,https://example.invalid/a.png
+                """;
+
+        var question =
+                service.draft(csv, mappings("Typ", null)).questions().getFirst().question();
+
+        assertEquals("Ein Hinweis", question.description());
+        assertEquals("https://example.invalid/a.png", question.imageUrl());
+    }
+
+    @Test
+    void leavesTheImageUnsetWhenNoColumnCarriesOne() {
+        var question = service.draft("Frage,Antwort\nA,x\n", mappings("Typ", null))
+                .questions()
+                .getFirst()
+                .question();
+
+        assertNull(question.imageUrl());
+        assertEquals("", question.description());
+    }
+
+    // -- Types --
 
     @Test
     void fallsBackToTheDefaultTypeWhenNoTypeColumnIsMapped() {
-        String csv = """
-                Frage,Antwort
-                A,wahr
-                """;
+        var draft = service.draft("Frage,Antwort\nA,wahr\n", mappings("Typ", QuizQuestionType.TRUE_FALSE));
 
-        service.importCsv(CATALOG, csv, mappings("Typ", QuizQuestionType.TRUE_FALSE));
-
-        var command = captureCommands(1).getFirst();
-        assertEquals(QuizQuestionType.TRUE_FALSE, command.questionType());
-        assertInstanceOf(QuestionConfig.TrueFalse.class, command.config());
+        assertEquals("TRUE_FALSE", draft.questions().getFirst().question().quizQuestionType());
+        assertInstanceOf(
+                QuestionConfig.TrueFalse.class, configOf(draft.questions().getFirst()));
     }
 
     @Test
     void fallsBackToMultipleChoiceWithoutTypeColumnOrDefaultType() {
-        String csv = """
-                Frage,Antwort
-                A,eins;zwei
-                """;
+        var draft = service.draft("Frage,Antwort\nA,eins;zwei\n", mappings("Typ", null));
 
-        service.importCsv(CATALOG, csv, mappings("Typ", null));
-
-        assertEquals(
-                QuizQuestionType.MULTIPLE_CHOICE, captureCommands(1).getFirst().questionType());
-    }
-
-    @Test
-    void keepsTheDefaultPointsWhenThePointsCellIsNotANumber() {
-        String csv = """
-                Frage,Antwort,Punkte
-                A,x,drei
-                """;
-
-        service.importCsv(CATALOG, csv, mappings("Typ", null));
-
-        assertEquals(1.0, captureCommands(1).getFirst().points());
-    }
-
-    @Test
-    void rejectsASheetWithoutTheQuestionColumn() {
-        String csv = """
-                Titel,Antwort
-                A,x
-                """;
-
-        assertThrows(BadRequestResponse.class, () -> service.importCsv(CATALOG, csv, mappings("Typ", null)));
-        verify(questionService, never()).createQuestion(any());
+        assertEquals("MULTIPLE_CHOICE", draft.questions().getFirst().question().quizQuestionType());
     }
 
     @Test
@@ -188,57 +187,67 @@ class QuizImportServiceTest {
                 t,x,AUFZAEHLUNG
                 """;
 
-        service.importCsv(CATALOG, csv, mappings("Typ", null));
-
-        var types = captureCommands(20).stream()
-                .map(CreateQuestionCommand::questionType)
+        var types = service.draft(csv, mappings("Typ", null)).questions().stream()
+                .map(draft -> draft.question().quizQuestionType())
                 .toList();
+
         assertEquals(
                 List.of(
-                        QuizQuestionType.MULTIPLE_CHOICE,
-                        QuizQuestionType.MULTIPLE_CHOICE,
-                        QuizQuestionType.TRUE_FALSE,
-                        QuizQuestionType.TRUE_FALSE,
-                        QuizQuestionType.TRUE_FALSE,
-                        QuizQuestionType.FREE_ANSWER,
-                        QuizQuestionType.FREE_ANSWER,
-                        QuizQuestionType.FREE_ANSWER,
-                        QuizQuestionType.FILL_IN_THE_BLANK,
-                        QuizQuestionType.FILL_IN_THE_BLANK,
-                        QuizQuestionType.FILL_IN_THE_BLANK,
-                        QuizQuestionType.FILL_IN_THE_BLANK,
-                        QuizQuestionType.CONNECT,
-                        QuizQuestionType.CONNECT,
-                        QuizQuestionType.ORDERING,
-                        QuizQuestionType.ORDERING,
-                        QuizQuestionType.IMAGE_TEXT,
-                        QuizQuestionType.ENUMERATION,
-                        QuizQuestionType.ENUMERATION,
-                        QuizQuestionType.ENUMERATION),
+                        "MULTIPLE_CHOICE",
+                        "MULTIPLE_CHOICE",
+                        "TRUE_FALSE",
+                        "TRUE_FALSE",
+                        "TRUE_FALSE",
+                        "FREE_ANSWER",
+                        "FREE_ANSWER",
+                        "FREE_ANSWER",
+                        "FILL_IN_THE_BLANK",
+                        "FILL_IN_THE_BLANK",
+                        "FILL_IN_THE_BLANK",
+                        "FILL_IN_THE_BLANK",
+                        "CONNECT",
+                        "CONNECT",
+                        "ORDERING",
+                        "ORDERING",
+                        "IMAGE_TEXT",
+                        "ENUMERATION",
+                        "ENUMERATION",
+                        "ENUMERATION"),
                 types);
+    }
+
+    // -- Refusals --
+
+    @Test
+    void rejectsASheetWithoutTheQuestionColumn() {
+        assertThrows(BadRequestResponse.class, () -> service.draft("Titel,Antwort\nA,x\n", mappings("Typ", null)));
     }
 
     @Test
     void rejectsAnUnknownQuestionType() {
-        String csv = """
-                Frage,Antwort,Typ
-                A,x,Kreuzwortraetsel
-                """;
-
-        assertThrows(BadRequestResponse.class, () -> service.importCsv(CATALOG, csv, mappings("Typ", null)));
+        assertThrows(
+                BadRequestResponse.class,
+                () -> service.draft("Frage,Antwort,Typ\nA,x,Kreuzwortraetsel\n", mappings("Typ", null)));
     }
 
     @Test
     void rejectsAnUnparsableSheet() {
-        String csv = "\"Frage,Antwort\nA,x\n";
-
-        assertThrows(BadRequestResponse.class, () -> service.importCsv(CATALOG, csv, mappings("Typ", null)));
+        assertThrows(BadRequestResponse.class, () -> service.draft("\"Frage,Antwort\nA,x\n", mappings("Typ", null)));
     }
 
     @Test
-    void buildsMultipleChoiceWithTheFirstAnswerMarkedCorrect() {
+    void keepsTheDefaultPointsWhenThePointsCellIsNotANumber() {
+        var draft = service.draft("Frage,Antwort,Punkte\nA,x,drei\n", mappings("Typ", null));
+
+        assertEquals(1.0, draft.questions().getFirst().question().points());
+    }
+
+    // -- Configs --
+
+    @Test
+    void marksTheFirstAnswerCorrectWhenNoColumnHoldsTheWrongOnes() {
         var config = assertInstanceOf(
-                QuestionConfig.MultipleChoice.class, importOne(QuizQuestionType.MULTIPLE_CHOICE, "A; B ;C"));
+                QuestionConfig.MultipleChoice.class, draftOne(QuizQuestionType.MULTIPLE_CHOICE, "A; B ;C"));
 
         assertEquals(3, config.options().size());
         assertEquals("A", config.options().getFirst().text());
@@ -247,27 +256,53 @@ class QuizImportServiceTest {
         assertEquals(0.5, config.pointsPerCorrect());
     }
 
+    /**
+     * A sheet that keeps its wrong answers apart means every answer in the answer cell, so the
+     * reading of that cell changes with the second column rather than staying positional.
+     */
     @Test
-    void buildsTrueFalseFromTheAffirmativeSpellings() {
-        assertTrue(((QuestionConfig.TrueFalse) importOne(QuizQuestionType.TRUE_FALSE, "true")).correctAnswer());
-        assertTrue(((QuestionConfig.TrueFalse) importOne(QuizQuestionType.TRUE_FALSE, "1")).correctAnswer());
-        assertTrue(((QuestionConfig.TrueFalse) importOne(QuizQuestionType.TRUE_FALSE, "Wahr")).correctAnswer());
-        assertFalse(((QuestionConfig.TrueFalse) importOne(QuizQuestionType.TRUE_FALSE, "nein")).correctAnswer());
+    void takesEveryAnswerAsCorrectWhenAColumnHoldsTheWrongOnes() {
+        String csv = """
+                Frage,Antwort,Falsch,Typ
+                Welche Klassen gibt es?,A;B,X;Y,MC
+                """;
+
+        var config = assertInstanceOf(
+                QuestionConfig.MultipleChoice.class,
+                configOf(service.draft(csv, mappings("Typ", null)).questions().getFirst()));
+
+        assertEquals(
+                List.of("A", "B", "X", "Y"),
+                config.options().stream().map(o -> o.text()).toList());
+        assertEquals(
+                List.of(true, true, false, false),
+                config.options().stream().map(o -> o.correct()).toList());
+    }
+
+    /**
+     * A blank with nothing to pick from is the one shape these catalogs should not produce, so a
+     * distractor column turns a fill-in into a list the member chooses from.
+     */
+    @Test
+    void offersFillInTheBlankAsAListWhenDistractorsAreGiven() {
+        String csv = """
+                Frage,Antwort,Falsch,Typ
+                Ein C-Schlauch ist __ lang,15 Meter,20 Meter;30 Meter,fill_blank
+                """;
+
+        var config = assertInstanceOf(
+                QuestionConfig.FillInTheBlank.class,
+                configOf(service.draft(csv, mappings("Typ", null)).questions().getFirst()));
+
+        assertEquals(List.of("15 Meter"), config.answers());
+        assertEquals(List.of("20 Meter", "30 Meter"), config.distractors());
+        assertTrue(config.useDropdown());
     }
 
     @Test
-    void buildsFreeAnswerWithThreeLines() {
+    void leavesFillInTheBlankAsAnOpenBoxWithoutDistractors() {
         var config = assertInstanceOf(
-                QuestionConfig.FreeAnswer.class, importOne(QuizQuestionType.FREE_ANSWER, "Paris;Berlin"));
-
-        assertEquals(List.of("Paris", "Berlin"), config.answers());
-        assertEquals(3, config.lines());
-    }
-
-    @Test
-    void buildsFillInTheBlankFromTheAnswerList() {
-        var config = assertInstanceOf(
-                QuestionConfig.FillInTheBlank.class, importOne(QuizQuestionType.FILL_IN_THE_BLANK, "Paris;Berlin"));
+                QuestionConfig.FillInTheBlank.class, draftOne(QuizQuestionType.FILL_IN_THE_BLANK, "Paris;Berlin"));
 
         assertEquals("", config.text());
         assertEquals(List.of("Paris", "Berlin"), config.answers());
@@ -276,8 +311,26 @@ class QuizImportServiceTest {
     }
 
     @Test
+    void buildsTrueFalseFromTheAffirmativeSpellings() {
+        assertTrue(((QuestionConfig.TrueFalse) draftOne(QuizQuestionType.TRUE_FALSE, "true")).correctAnswer());
+        assertTrue(((QuestionConfig.TrueFalse) draftOne(QuizQuestionType.TRUE_FALSE, "1")).correctAnswer());
+        assertTrue(((QuestionConfig.TrueFalse) draftOne(QuizQuestionType.TRUE_FALSE, "Wahr")).correctAnswer());
+        assertTrue(((QuestionConfig.TrueFalse) draftOne(QuizQuestionType.TRUE_FALSE, "ja")).correctAnswer());
+        assertFalse(((QuestionConfig.TrueFalse) draftOne(QuizQuestionType.TRUE_FALSE, "nein")).correctAnswer());
+    }
+
+    @Test
+    void buildsFreeAnswerWithThreeLines() {
+        var config = assertInstanceOf(
+                QuestionConfig.FreeAnswer.class, draftOne(QuizQuestionType.FREE_ANSWER, "Paris;Berlin"));
+
+        assertEquals(List.of("Paris", "Berlin"), config.answers());
+        assertEquals(3, config.lines());
+    }
+
+    @Test
     void buildsConnectPairsFromEqualsSeparatedCells() {
-        var config = assertInstanceOf(QuestionConfig.Connect.class, importOne(QuizQuestionType.CONNECT, "A=1;B"));
+        var config = assertInstanceOf(QuestionConfig.Connect.class, draftOne(QuizQuestionType.CONNECT, "A=1;B"));
 
         assertEquals(2, config.pairs().size());
         assertEquals("A", config.pairs().getFirst().left());
@@ -288,61 +341,120 @@ class QuizImportServiceTest {
 
     @Test
     void buildsOrderingFromTheAnswerList() {
-        var config = assertInstanceOf(QuestionConfig.Ordering.class, importOne(QuizQuestionType.ORDERING, "A;B;C"));
+        var config = assertInstanceOf(QuestionConfig.Ordering.class, draftOne(QuizQuestionType.ORDERING, "A;B;C"));
 
         assertEquals(List.of("A", "B", "C"), config.items());
     }
 
     @Test
-    void buildsImageTextWithoutAnyAnswer() {
-        var config = assertInstanceOf(QuestionConfig.ImageText.class, importOne(QuizQuestionType.IMAGE_TEXT, "x"));
+    void keepsTheAnswerCellOfAnImageQuestion() {
+        var config =
+                assertInstanceOf(QuestionConfig.ImageText.class, draftOne(QuizQuestionType.IMAGE_TEXT, "Verteiler"));
 
         assertNull(config.imageUrl());
-        assertNull(config.answer());
+        assertEquals("Verteiler", config.answer());
     }
 
     @Test
     void buildsEnumerationCappedAtThreeRequiredAnswers() {
         var many =
-                assertInstanceOf(QuestionConfig.Enumeration.class, importOne(QuizQuestionType.ENUMERATION, "a;b;c;d"));
+                assertInstanceOf(QuestionConfig.Enumeration.class, draftOne(QuizQuestionType.ENUMERATION, "a;b;c;d"));
         assertEquals(List.of("a", "b", "c", "d"), many.answers());
         assertEquals(3, many.requiredCount());
         assertFalse(many.orderedRequired());
 
-        var few = assertInstanceOf(QuestionConfig.Enumeration.class, importOne(QuizQuestionType.ENUMERATION, "a;b"));
+        var few = assertInstanceOf(QuestionConfig.Enumeration.class, draftOne(QuizQuestionType.ENUMERATION, "a;b"));
         assertEquals(2, few.requiredCount());
     }
 
     @Test
-    void honoursCustomSeparators() {
-        var mappings = new QuizImportService.CsvMappings(
-                "Frage", "Antwort", "Kategorie", "Typ", "Punkte", ";", "|", QuizQuestionType.ORDERING);
-
-        service.importCsv(CATALOG, "Frage;Antwort\nA;eins|zwei\n", mappings);
+    void takesTheEnumerationCountAndOrderFromTheSheetWhenMapped() {
+        String csv = """
+                Frage,Antwort,Anzahl,Geordnet,Typ
+                Nenne die Rettungskette,a;b;c;d;e,5,ja,enumeration
+                """;
 
         var config = assertInstanceOf(
-                QuestionConfig.Ordering.class, captureCommands(1).getFirst().config());
+                QuestionConfig.Enumeration.class,
+                configOf(service.draft(csv, mappings("Typ", null)).questions().getFirst()));
+
+        assertEquals(5, config.requiredCount());
+        assertTrue(config.orderedRequired());
+    }
+
+    @Test
+    void takesThePerAnswerPointsFromTheSheetWhenMapped() {
+        String csv = """
+                Frage,Antwort,ProAntwort,Typ
+                A,a;b;c,2.5,ordering
+                """;
+
+        var config = assertInstanceOf(
+                QuestionConfig.Ordering.class,
+                configOf(service.draft(csv, mappings("Typ", null)).questions().getFirst()));
+
+        assertEquals(2.5, config.pointsPerCorrect());
+    }
+
+    // -- Separators --
+
+    @Test
+    void honoursCustomSeparators() {
+        var custom = new CsvMappings(
+                "Frage",
+                "Antwort",
+                "Kategorie",
+                "Typ",
+                "Punkte",
+                "",
+                "",
+                "",
+                "",
+                "",
+                "",
+                ";",
+                "|",
+                QuizQuestionType.ORDERING);
+
+        var draft = service.draft("Frage;Antwort\nA;eins|zwei\n", custom);
+
+        var config = assertInstanceOf(
+                QuestionConfig.Ordering.class, configOf(draft.questions().getFirst()));
         assertEquals(List.of("eins", "zwei"), config.items());
     }
 
     @Test
     void fallsBackToTheDefaultSeparatorsWhenUnset() {
-        var mappings = new QuizImportService.CsvMappings(
-                "Frage", "Antwort", "Kategorie", "Typ", "Punkte", null, null, QuizQuestionType.ORDERING);
+        var unset = new CsvMappings(
+                "Frage",
+                "Antwort",
+                "Kategorie",
+                "Typ",
+                "Punkte",
+                "",
+                "",
+                "",
+                "",
+                "",
+                "",
+                null,
+                null,
+                QuizQuestionType.ORDERING);
 
-        service.importCsv(CATALOG, "Frage,Antwort\nA,eins;zwei\n", mappings);
+        var draft = service.draft("Frage,Antwort\nA,eins;zwei\n", unset);
 
         var config = assertInstanceOf(
-                QuestionConfig.Ordering.class, captureCommands(1).getFirst().config());
+                QuestionConfig.Ordering.class, configOf(draft.questions().getFirst()));
         assertEquals(List.of("eins", "zwei"), config.items());
     }
 
-    private QuestionConfig importOne(QuizQuestionType type, String answer) {
-        catalogService = mock(QuizCatalogService.class);
-        questionService = mock(QuizQuestionService.class);
-        service = new QuizImportService(catalogService, questionService);
-        when(catalogService.findCategories(anyInt())).thenReturn(List.of());
-        service.importCsv(CATALOG, "Frage,Antwort\nTitel,%s\n".formatted(answer), mappings("Typ", type));
-        return captureCommands(1).getFirst().config();
+    @Test
+    void readsADecimalWrittenWithAComma() {
+        var semicolonSheet = new CsvMappings(
+                "Frage", "Antwort", "Kategorie", "Typ", "Punkte", "", "", "", "", "", "", ";", ";", null);
+
+        var draft = service.draft("Frage;Antwort;Punkte\nA;x;2,5\n", semicolonSheet);
+
+        assertEquals(2.5, draft.questions().getFirst().question().points());
     }
 }
